fixed mobile responsive spacing for forms/btn on resume

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -246,15 +246,15 @@ label {
 .Resume {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  margin-top: 15px;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 60px;
 }
 
 .resume-btn-container {
   width: 100%;
   text-align: center;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 }
 
 .resume-btn a {
@@ -286,10 +286,14 @@ label {
 }
 
 .resume-fields {
-  margin-top: 10px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+}
+
+.resume-card {
   width: 100%;
 }
 
@@ -366,6 +370,18 @@ footer {
     font-size: 1.3rem;
   }
 
+  .Resume {
+    margin-top: 50px;
+  }
+
+  .resume-fields {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+  }
+
   .footer-link {
     margin: 35px;
   }
@@ -397,5 +413,9 @@ footer {
   
   .nav-link.active {
     font-size: 1.4rem;
+  }
+
+  .Resume {
+    margin-top: 30px;
   }
 }
